Added logger, backtracing, old nfd and boxer dialogs, fleshed out error handling strategy, fixed scope_guard install. To help enforce leaf-style error handling, "not all control paths return a value" has been upgraded to an error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,15 +43,82 @@ CPMAddPackage(
 
 CPMAddBaseModule(boostorg_leaf)
 
+####
+
 CPMAddPackage(
 	NAME scope_guard
 	GITHUB_REPOSITORY ricab/scope_guard
 	GIT_TAG 760de0a9ea0fec980a5244604ffa5b1acff2db7a
 	DOWNLOAD_ONLY true)
-
+	
 if( NOT ${scope_guard_ADDED} )
 	message( FATAL_ERROR "Could not find scope_guard" )
 endif()
+
+####
+
+CPMAddPackage(
+	NAME backward_cpp
+	GIT_TAG b248998ff393d5e61bec5e45228fa71897aff984
+	GITHUB_REPOSITORY bombela/backward-cpp
+	OPTIONS
+		"BACKWARD_SHARED Off"
+		"BACKWARD_TESTS Off"
+	DOWNLOAD_ONLY true)
+	
+if( NOT ${backward_cpp_ADDED} )
+	message( FATAL_ERROR "Could not find backward_cpp" )
+endif()
+	
+####
+
+CPMAddPackage(
+	NAME spdlog
+	GITHUB_REPOSITORY gabime/spdlog
+	GIT_TAG 18e3f07f7d333d33c0ef8fbea02299dbe5d49f97 
+	DOWNLOAD_ONLY true)
+
+if( NOT ${spdlog_ADDED} )
+	message( FATAL_ERROR "Could not find spdlog" )
+endif()
+
+####
+
+CPMAddPackage(
+	NAME fmt
+	GITHUB_REPOSITORY fmtlib/fmt
+	GIT_TAG af283059612dd06c321dc509255ae9b003ca5e69
+	DOWNLOAD_ONLY true)
+
+if( NOT ${fmt_ADDED} )
+	message( FATAL_ERROR "Could not find fmt" )
+endif()
+
+####
+
+CPMAddPackage(
+	NAME nfd
+	GITHUB_REPOSITORY loopunit/nfd
+	GIT_TAG 25812c53ef77f7ac7d40775c0cd5c3446eee4423
+	DOWNLOAD_ONLY true)
+
+if( NOT ${nfd_ADDED} )
+	message( FATAL_ERROR "Could not find nfd" )
+endif()
+
+####
+
+CPMAddPackage(
+	NAME boxer
+	GITHUB_REPOSITORY aaronmjacobs/Boxer
+	GIT_TAG 01c17f6a9cd66068f7890ea887ab3b9a673f0434
+	DOWNLOAD_ONLY true)
+
+if( NOT ${boxer_ADDED} )
+	message( FATAL_ERROR "Could not find boxer" )
+endif()
+
+####
 
 set(mu_stdlib_SOURCE_ROOT ${CMAKE_CURRENT_LIST_DIR})
 
@@ -60,21 +127,51 @@ file(GLOB mu_stdlib_headers
 
 file(GLOB mu_stdlib_sources
 	"${mu_stdlib_SOURCE_ROOT}/src/*.cpp"
-	"${mu_stdlib_SOURCE_ROOT}/src/*.h")
+	"${mu_stdlib_SOURCE_ROOT}/src/*.h"
+	"${spdlog_SOURCE_DIR}/src/*.cpp"
+	"${fmt_SOURCE_DIR}/src/*.cc"
+	"${nfd_SOURCE_DIR}/src/nfd_win.cpp"
+	"${nfd_SOURCE_DIR}/src/common.h"
+	"${nfd_SOURCE_DIR}/src/nfd_common.h"
+	"${nfd_SOURCE_DIR}/src/nfd_common.c")
 
-add_library(mu_stdlib STATIC ${mu_stdlib_sources} ${mu_stdlib_headers})
+if(APPLE)
+	file(GLOB mu_stdlib_platform_sources
+		"${boxer_SOURCE_DIR}/src/boxer_osx.mm")
+elseif (WIN32)		
+	file(GLOB mu_stdlib_platform_sources
+		"${boxer_SOURCE_DIR}/src/boxer_win.cpp")
+elseif (LINUX)		
+	file(GLOB mu_stdlib_platform_sources
+		"${boxer_SOURCE_DIR}/src/boxer_linux.cpp")
+endif()		
+
+add_library(mu_stdlib STATIC ${mu_stdlib_sources} ${mu_stdlib_headers} ${mu_stdlib_platform_sources})
 
 target_include_directories(mu_stdlib
 	PUBLIC 
 		$<BUILD_INTERFACE:${scope_guard_SOURCE_DIR}>
+		$<BUILD_INTERFACE:${backward_cpp_SOURCE_DIR}>
 		$<BUILD_INTERFACE:${mu_stdlib_SOURCE_ROOT}/include>
+		$<BUILD_INTERFACE:${spdlog_SOURCE_DIR}/include>
+		$<BUILD_INTERFACE:${fmt_SOURCE_DIR}/include>
+		$<BUILD_INTERFACE:${nfd_SOURCE_DIR}/src>
+		$<BUILD_INTERFACE:${nfd_SOURCE_DIR}/src/include>
+		$<BUILD_INTERFACE:${boxer_SOURCE_DIR}/include>
 		$<INSTALL_INTERFACE:include>)
 
 target_link_libraries(mu_stdlib
 	PUBLIC
 		cpm_install::boostorg_leaf)
 
+if (WIN32)		
+target_link_libraries(mu_stdlib
+	PUBLIC
+		Winmm.lib)
+endif()
 set_target_properties(mu_stdlib PROPERTIES CXX_STANDARD 20)
+
+target_compile_definitions(mu_stdlib PUBLIC SPDLOG_COMPILED_LIB SPDLOG_FMT_EXTERNAL)
 
 packageProject(
 	NAME mu_stdlib
@@ -85,8 +182,24 @@ packageProject(
 
 install(
 	FILES ${scope_guard_SOURCE_DIR}/scope_guard.hpp
-	DESTINATION ${mu_stdlib_SOURCE_ROOT}/include)
+	DESTINATION include)
 
+#install(
+#	FILES ${backward_cpp_SOURCE_DIR}/backward.hpp
+#	DESTINATION include)
+
+install(
+	DIRECTORY ${spdlog_SOURCE_DIR}/include/spdlog
+	DESTINATION include)
+
+install(
+	DIRECTORY ${fmt_SOURCE_DIR}/include/fmt
+	DESTINATION include)
+
+#install(
+#	FILES ${nfd_SOURCE_DIR}/src/include/nfd.h
+#	DESTINATION include)
+		
 if(MSVC)
   if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
     set_target_properties(mu_stdlib PROPERTIES IMPORTED_CONFIGURATIONS "Debug")
@@ -95,6 +208,11 @@ if(MSVC)
     set_target_properties(mu_stdlib PROPERTIES IMPORTED_CONFIGURATIONS "RelWithDebInfo")
     set_target_properties(mu_stdlib PROPERTIES COMPILE_PDB_NAME mu_stdlib COMPILE_PDB_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/lib" )
   endif()
+
+  # For example: leaf::result<void> must return { }, otherwise the error will only manifest at runtime.
+  # Incorrect handling of this nature will result in "not all control paths return a value", and upgrading 
+  # this to an error lets us catch this at compile time.
+  target_compile_options(mu_stdlib PUBLIC /we4715)
 endif()
 
 if (MU_STDLIB_BUILD_TESTS)
