--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,9 @@
     "cmake.cacheInit": null,
     "cmake.generator": "Ninja",
     "cmake.configureArgs": [
-        "-DCPM_BUILD_TEST:BOOL=on",
-        "-DCPM_DEV_ROOT:PATH=${userHome}/dev/loopunit",
-        "-Dcpmpckg_SOURCE_DIR:PATH=${userHome}/dev/loopunit/cpmpckg"
+        "-DMU_STDLIB_BUILD_TESTS:BOOL=on",
+        "-DCPM_DEV_ROOT:PATH=${env:MU_DEV_ROOT}",
+        "-Dcpmpckg_SOURCE_DIR:PATH=${env:MU_DEV_ROOT}/cpmpckg"
     ],
     "cmake.configureOnOpen": false,
     "cmake.installPrefix": "${workspaceFolder}/out/${buildType}/install",
